    functions.
  * :class:`~ensemble.Ensemble` class accepts :class:`atomic.Atomic` 
    instances and automatically adds coordinate sets to the ensemble. 
  
**Changes**:
 
  * :class:`PDBlastRecord` is renamed as :class:`~proteins.PDBBlastRecord`. 
  * :class:`~dynamics.NMABase` instances can be index using a list or tuple of 
    integers, e.g. ``anm[1,3,5]``.

**Bugfixes**:
    
  * A bug in :func:`~proteins.assignSecondaryStructure` function is fixed.
  * Bugfixes in :ref:`scripts-anm` and :ref:`scripts-gnm`.
  * Bugfixes in :func:`~dynamics.showSqFlucts` and 
    :func:`~dynamics.showProjection` functions.

Release 0.5.3 (Feb 11, 2011)
===============================================================================

**New Features**:

  * Membership, equality, and non-equality test operation are defined for all 
    :mod:`~prody.atomic` classes. See :ref:`selection-operations`.
  * Two functions are implemented for dealing with anisotropic temperature 
    factors: :func:`~measure.calcADPAxes` and :func:`~measure.buildADPMatrix`.
  * :meth:`~dynamics.NMA.setEigens` and :meth:`~dynamics.NMA.addEigenpair` 
    methods are implemented to assist analysis of normal modes calculated using 
    external software.
  * :func:`~dynamics.parseNMD` is implemented for parsing NMD files.
  * :func:`~dynamics.parseModes` is implemented for parsing normal mode data.
  * :func:`~dynamics.parseArray` is implementing for reading numeric data,
    particularly normal mode data calculated using other software for analysis
    using ProDy. 
  * The method in [BH02]_ to calculate overlap between covariance matrices is 
    implemented as :func:`~dynamics.calcCovarianceOverlap` function.
  * A method to trim :class:`~ensemble.Ensemble` instances is implemented: 
    :func:`~ensemble.trimEnsemble`
  * :func:`checkUpdates` to check for ProDy updates is implemented.

**Changes**:

  * Change in default behavior of :func:`~proteins.parsePDB` function. When