@@ -1,3 +1,3 @@
 <h3 style="color: white; background-color: #C4AFC1; border: 1px solid #9B9886;">New Release</h3>
-ProDy {{ version }} has one incompatible change. Visit 
+ProDy {{ version }} has incompatible changes. Visit 
 <a href="{{ pathto("changes") }}">Changes</a> to see if your work is affected. 
