@@ -48,6 +48,8 @@ Release 0.6 (in development)
   * :class:`PDBlastRecord` is renamed as :class:`~proteins.PDBBlastRecord`. 
   * :class:`~dynamics.NMABase` instances can be index using a list or tuple of 
     integers, e.g. ``anm[1,3,5]``.
+  * :term:`ca`,:term:`bb`, and :term:`sc` keywords are defined as short-hands 
+    for :term:`calpha`, :term:`backbone`, and :term:`sidechain`, respectively.
 
 **Bugfixes**:
     
